# Bitstamp-FIX-cpp

./: .gitignore  Book.h  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  brain.cpp  cmake_install.cmake  config.h  test  test.cbp
config/: tradeclient.cfg
connector/: Bitstamp.cpp  Bitstamp.h  Connector.cpp  Connector.h
connector/fix/: Connector.cpp  Connector.h
connector_backup/: Connector.cpp  Connector.h
store/: FIX.4.4-lpwp6653-BITSTAMP.body  FIX.4.4-lpwp6653-BITSTAMP.header  FIX.4.4-lpwp6653-BITSTAMP.seqnums  FIX.4.4-lpwp6653-BITSTAMP.session
